--- a/css/main.css
+++ b/css/main.css
@@ -546,7 +546,168 @@ html {
         margin-top: -.5rem;
         height: 4rem;
       }
+      #mini-brief{
+        color: var(--white-color);
+        /* justify-items: center; */
+    }
+    #path-6{
+        margin-top:-.5rem;
+        margin-left: .5rem;
+      }
+      #path-6 .hr-line{
+       width: 345px;
+      }
+      #vr-spread1{
+        display: flex;
+        justify-content: space-between;
+       
+      }
+      #vr-spread1 .vr-single{
+        margin-top: -.5rem;
+        height: 2rem;
+      }
+      #vr-spread1 .vr-single:nth-child(1){
+        margin-left: .8rem;
+      }
+      #vr-spread1 .vr-single:nth-child(2){
+        margin-right: .3rem;
+      }
+     
+      #emma-name{
+        color: var(--white-color);
+        display: flex;
+        justify-content: space-between;
+        
+      }
+      .owner-name{
+        font-size: var(--ebrima-tablet-small-size);
+        font-family: var(--body-font);
+        color: var(--white-color);
+        text-align: center;
+        line-height: 2;
+        z-index: 2;
+        text-transform: uppercase;
+        align-items: center; 
+        align-self: center;
+             
+    }
+    .owner-name span{
+        display: block;
+        text-align: center;
+        
+    }
+    #mini-brief-image{
+        width: 176px;
+        height: 176px;
+        border: 5px solid var(--red-color);
+        overflow: hidden;
+    }
+    #mini-brief-image img{
+        width: 100%;
+        height: 100%;
+      object-fit: cover;
+      filter: grayscale(100);
+        
+    }
+    #emma-name .owner-name:nth-child(1){
+        margin-left: .6rem;
+    }
+    #emma-name .owner-name:nth-child(3){
+        margin-right: .2rem;
+    }
+    #index-text-switch{
+        z-index: 1;
+        justify-self: center; 
+       align-self: center;
+       text-transform: uppercase;
+       margin-top: 3rem;
+    }
     
+    .skl-top-text-switch,
+    .skl-bottom-text-switch{
+        font-family: var(--bold-font);
+        font-size: var(--frankgot-mobile-mid-size);
+        color:transparent;
+        -webkit-text-stroke:1px var(--white-color);
+        font-weight: bold;
+        justify-content: center; 
+       align-items: center;
+       display: grid;
+    }
+    
+    .skl-middle-text-switch{
+        font-family: var(--bold-font);
+        font-size: var(--frankgot-mobile-bigger-size);
+        color:var(--white-color);
+        justify-content: center; 
+       align-items: center;
+       display: grid;
+       object-fit: contain;
+    }
+    #mini-brief2{
+        color: var(--white-color);
+        /* justify-items: center; */
+        margin-top: 4rem;
+    }
+    #path-7{
+        margin-top:-.5rem;
+        margin-left: .6rem;
+        
+      }
+      #path-7 .hr-line{
+       width: 350px;
+      }
+      #vr-spread2{
+        display: flex;
+        justify-content: space-between;
+        margin-top: .5rem;
+       
+      }
+      #vr-spread2 .vr-single{
+        margin-top: -.5rem;
+        height: 2rem;
+      }
+      #vr-spread2 .vr-single:nth-child(1){
+        margin-left: .9rem;
+      }
+      #vr-spread2 .vr-single:nth-child(2){
+        margin-right: .3rem;
+      }
+     
+      #opa-name{
+        color: var(--white-color);
+        display: flex;
+        justify-content: space-between;
+        
+      }
+     
+    #mini-brief2-image{
+        width: 176px;
+        height: 176px;
+        border: 5px solid var(--red-color);
+        overflow: hidden;
+    }
+    #mini-brief2-image img{
+        width: 100%;
+        height: 100%;
+      object-fit: cover;
+      filter: grayscale(100);
+        
+    }
+    #opa-name .owner-name:nth-child(1){
+        margin-left: .8rem;
+    }
+    #opa-name .owner-name:nth-child(3){
+        margin-right: .2rem;
+    }
+    #mini-brief2 .vr-single{
+        margin-top: -.5rem;
+        height: 4rem;
+        justify-self: center;
+      }
+
+
+
 
     @media screen and (min-width: 768px) {
     /* TABLET NAVIGATION START */
@@ -849,6 +1010,168 @@ html {
         height: 4rem;
         margin-left: .5rem;
       }
+      /*  */
+    
+    #path-6{
+        margin-top:-.9rem;
+        margin-left: .5rem;
+      }
+      #path-6 .hr-line{
+       width: 650px;
+      }
+      #vr-spread1{
+        display: flex;
+        justify-content: space-between;
+       
+      }
+      #vr-spread1 .vr-single{
+        margin-top: -.5rem;
+        height: 4rem;
+      }
+      #vr-spread1 .vr-single:nth-child(1){
+        margin-left: 1.2rem;
+      }
+      #vr-spread1 .vr-single:nth-child(2){
+        margin-right: .6rem;
+      }
+     
+      #emma-name{
+        color: var(--white-color);
+        display: flex;
+        justify-content: space-between;
+       
+        
+      }
+      .owner-name{
+        font-size: var(--ebrima-tablet-big-size);
+        font-family: var(--body-font);
+        color: var(--white-color);
+        text-align: center;
+        line-height: 2;
+        z-index: 2;
+        text-transform: uppercase;
+        align-items: center; 
+        align-self: center;
+             
+    }
+    .owner-name span{
+        display: block;
+        text-align: center;
+        
+    }
+    #mini-brief-image{
+        width: 341px;
+        height: 341px;
+        border: 5px solid var(--red-color);
+        overflow: hidden;
+    }
+    #mini-brief-image img{
+        width: 100%;
+        height: 100%;
+      object-fit: cover;
+      filter: grayscale(100);
+        
+    }
+    #emma-name .owner-name:nth-child(1){
+        margin-left: .6rem;
+        line-height: 35px;
+    }
+    #emma-name .owner-name:nth-child(3){
+        margin-right: .2rem;
+        line-height: 35px;
+    }
+    #index-text-switch{
+        z-index: 1;
+        justify-self: center; 
+       align-self: center;
+       text-transform: uppercase;
+       margin-top: 3rem;
+    }
+    
+    .skl-top-text-switch,
+    .skl-bottom-text-switch{
+        font-family: var(--bold-font);
+        font-size: var(--frankgot-tablet-mid-size);
+        color:transparent;
+        -webkit-text-stroke:1px var(--white-color);
+        font-weight: bold;
+        justify-content: center; 
+       align-items: center;
+       display: grid;
+    }
+    
+    .skl-middle-text-switch{
+        font-family: var(--bold-font);
+        font-size: var(--frankgot-tablet-bigger-size);
+        color:var(--white-color);
+        justify-content: center; 
+       align-items: center;
+       display: grid;
+       object-fit: contain;
+    }
+    #mini-brief2{
+        color: var(--white-color);
+        /* justify-items: center; */
+        margin-top: 4rem;
+    }
+    #path-7{
+        margin-top:-.5rem;
+        margin-left: .6rem;
+        
+      }
+      #path-7 .hr-line{
+       width: 661px;
+      }
+      #vr-spread2{
+        display: flex;
+        justify-content: space-between;
+        margin-top: .5rem;
+       
+      }
+      #vr-spread2 .vr-single{
+        margin-top: -.5rem;
+        height: 4rem;
+      }
+      #vr-spread2 .vr-single:nth-child(1){
+        margin-left: 1.4rem;
+      }
+      #vr-spread2 .vr-single:nth-child(2){
+        margin-right: .6rem;
+      }
+     
+      #opa-name{
+        color: var(--white-color);
+        display: flex;
+        justify-content: space-between;
+        
+      }
+     
+    #mini-brief2-image{
+        width: 341px;
+        height: 341px;
+        border: 5px solid var(--red-color);
+        overflow: hidden;
+    }
+    #mini-brief2-image img{
+        width: 100%;
+        height: 100%;
+      object-fit: cover;
+      filter: grayscale(100);
+        
+    }
+    #opa-name .owner-name:nth-child(1){
+        margin-left: .8rem;
+        line-height: 35px;
+    }
+    #opa-name .owner-name:nth-child(3){
+        margin-right: .6rem;
+        line-height: 35px;
+    }
+    #mini-brief2 .vr-single{
+        margin-top: -1rem;
+        height: 4rem;
+        justify-self: center;
+      }
     
  
     /* TABLET NAVIGATION SECTION END */
@@ -1081,6 +1404,172 @@ html {
         margin-top: -.5rem;
         height: 4rem;
         margin-left: 2rem;
+      }
+
+      /*  */
+      #path-6{
+        margin-top:-1.3rem;
+        margin-left: .5rem;
+      }
+      #path-6 .hr-line{
+       width: 1140px;
+      }
+      #vr-spread1{
+        display: flex;
+        justify-content: space-between;
+       
+      }
+      #vr-spread1 .vr-single{
+        margin-top: -.5rem;
+        height: 7rem;
+      }
+      #vr-spread1 .vr-single:nth-child(1){
+        margin-left: 1.6rem;
+      }
+      #vr-spread1 .vr-single:nth-child(2){
+        margin-right: 1.2rem;
+      }
+     
+      #emma-name{
+       
+        color: var(--white-color);
+        display: flex;
+        justify-content: space-between;
+       
+        
+      }
+      .owner-name{
+        font-size: var(--ebrima-desktop-big-size);
+        font-family: var(--body-font);
+        color: var(--white-color);
+        text-align: center;
+        line-height: 2;
+        z-index: 2;
+        text-transform: uppercase;
+        align-items: center; 
+        align-self: center;
+             
+    }
+    .owner-name span{
+        display: block;
+        text-align: center;
+        
+    }
+    #mini-brief-image{
+        width: 602px;
+        height: 602px;
+        border: 5px solid var(--red-color);
+        overflow: hidden;
+    }
+    #mini-brief-image img{
+        width: 100%;
+        height: 100%;
+      object-fit: cover;
+      filter: grayscale(100);
+        
+    }
+    #emma-name .owner-name:nth-child(1){
+        margin-left: .6rem;
+        line-height: 55px;
+        
+    }
+    #emma-name .owner-name:nth-child(3){
+        margin-right: .2rem;
+        line-height: 55px;
+    }
+    #index-text-switch{
+        z-index: 1;
+        justify-self: center; 
+       align-self: center;
+       text-transform: uppercase;
+       margin-top: 3rem;
+    }
+    
+    .skl-top-text-switch,
+    .skl-bottom-text-switch{
+        font-family: var(--bold-font);
+        font-size: var(--frankgot-desktop-mid-size);
+        color:transparent;
+        -webkit-text-stroke:1px var(--white-color);
+        font-weight: bold;
+        justify-content: center; 
+       align-items: center;
+       display: grid;
+    }
+    
+    .skl-middle-text-switch{
+        font-family: var(--bold-font);
+        font-size: var(--frankgot-desktop-bigger-size);
+        color:var(--white-color);
+        justify-content: center; 
+       align-items: center;
+       display: grid;
+       object-fit: contain;
+    }
+    #mini-brief2{
+        color: var(--white-color);
+        /* justify-items: center; */
+        margin-top: 4rem;
+    }
+    #path-7{
+        margin-top:-.5rem;
+        margin-left: .6rem;
+        
+      }
+      #path-7 .hr-line{
+       width: 1130px;
+      }
+      #vr-spread2{
+        display: flex;
+        justify-content: space-between;
+        margin-top: .5rem;
+       
+      }
+      #vr-spread2 .vr-single{
+        margin-top: -.5rem;
+        height: 4rem;
+      }
+      #vr-spread2 .vr-single:nth-child(1){
+        margin-left: 1.4rem;
+        height: 7rem;
+      }
+      #vr-spread2 .vr-single:nth-child(2){
+        margin-right: .6rem;
+        height: 7rem;
+      }
+     
+      #opa-name{
+        color: var(--white-color);
+        display: flex;
+        justify-content: space-between;
+        
+      }
+     
+    #mini-brief2-image{
+        width: 602px;
+        height: 602px;
+        border: 5px solid var(--red-color);
+        overflow: hidden;
+    }
+    #mini-brief2-image img{
+        width: 100%;
+        height: 100%;
+      object-fit: cover;
+      filter: grayscale(100);
+        
+    }
+    #opa-name .owner-name:nth-child(1){
+        margin-left: .8rem;
+        line-height: 55px;
+    }
+    #opa-name .owner-name:nth-child(3){
+        margin-right: .6rem;
+        line-height: 55px;
+    }
+    #mini-brief2 .vr-single{
+        margin-top: -1rem;
+        height: 4rem;
+        justify-self: center;
       }
 
 }
