Video Reel Section
Responsive section mobile-Tabler-desktop

--- a/css/main.css
+++ b/css/main.css
@@ -204,6 +204,131 @@ html {
     display: grid;
     margin: -50px 0 30px 0;
 }
+/* Reels Section */
+#reel-box{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    border: 5px solid var(--red-color);
+}
+#countdown-circle {
+    width: 38px;
+    height: 38px;
+    background-color: var(--black-color);
+    border-radius: 50%;
+    border: 5px solid var(--red-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 14px;
+    position: absolute;
+    right: 45%;
+    margin-top: -1.5rem;
+    
+  }
+  
+  #countdown-text {
+    font-family: var(--bold-font);
+    font-size: var(--frankgot-mobile-small-size);
+}
+  
+
+.video-controls{
+    position: absolute;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background-color: var(--black-color);
+    background-image: linear-gradient(to bottom, rgb(0,0,0,0.3), rgb(0,0,0,0.5));
+    padding: 20px;
+    display: flex;
+    filter: opacity(.8);
+    
+
+}
+#play-button, #pause-button, #stop-button{
+    padding: 0 .3rem 0 .3rem;
+}
+#full-screen{
+    padding-left:.3rem;
+}
+#volume{
+    margin-left: auto;
+    padding: 0 .3rem 0 .3rem;
+}
+.video-controls.hidden {
+  display: none;
+}
+button{
+    padding: 0;
+    border: 0;
+    background-color: transparent;
+}
+/*********** Baseline, reset styles ***********/
+input[type="range"] {
+    -webkit-appearance: none;
+    appearance: none;
+    background: transparent;
+    cursor: pointer;
+    width: 12rem;
+    padding: 0 .3rem 0 .3rem;
+  }
+  
+  /* Removes default focus */
+  input[type="range"]:focus {
+    outline: none;
+  }
+  
+  /******** Chrome, Safari, Opera and Edge Chromium styles ********/
+  /* slider track */
+  input[type="range"]::-webkit-slider-runnable-track {
+    background-color: #ffffff;
+    border-radius: 0.5rem;
+    height: 0.5rem;
+  }
+  
+  /* slider thumb */
+  input[type="range"]::-webkit-slider-thumb {
+    -webkit-appearance: none; /* Override default look */
+    appearance: none;
+    margin-top: -4px; /* Centers thumb on the track */
+    background-color: #c40f0f;
+    border-radius: 2.5rem;
+    height: 1rem;
+    width: 1rem;
+  }
+  
+  input[type="range"]:focus::-webkit-slider-thumb {
+    outline: 3px solid #000000;
+    outline-offset: 0.125rem;
+  }
+  
+  /*********** Firefox styles ***********/
+  /* slider track */
+  input[type="range"]::-moz-range-track {
+    background-color: #ffffff;
+    border-radius: 0.5rem;
+    height: 0.5rem;
+  }
+  
+  /* slider thumb */
+  input[type="range"]::-moz-range-thumb {
+    background-color: #000000;
+    border: none; /*Removes extra border that FF applies*/
+    border-radius: 2.5rem;
+    height: 1rem;
+    width: 1rem;
+  }
+  
+  input[type="range"]:focus::-moz-range-thumb{
+    outline: 3px solid #bd0e0e;
+    outline-offset: 0.125rem;
+  }
+
+
+
+
 @media screen and (min-width: 768px) {
     .no-use{
         display: block;
@@ -707,6 +832,8 @@ html {
       }
 
 
+  
+  
 
 
     @media screen and (min-width: 768px) {
@@ -1172,7 +1299,38 @@ html {
         height: 4rem;
         justify-self: center;
       }
-    
+    /* reels video */
+    /* Reel video section */
+#countdown-circle {
+    width: 68px;
+    height: 68px;
+    right: 45.5%;
+   margin-top: -2.1rem;
+  }
+  #countdown-text {
+    font-family: var(--bold-font);
+    font-size: var(--frankgot-tablet-small-size);
+}
+    #play-button img{
+        width: 20px;
+        height: 20px;
+      }
+      #pause-button img{
+        width: 20px;
+        height: 20px;
+      }
+      #stop-button img{
+        width: 20px;
+        height: 20px;
+      }
+      #ctrl-left img{
+        width: 20px;
+        height: 20px;
+      }
+      #ctrl-right img{
+        width: 20px;
+        height: 20px;
+      }
  
     /* TABLET NAVIGATION SECTION END */
 
@@ -1571,6 +1729,18 @@ html {
         height: 4rem;
         justify-self: center;
       }
+      /* reels video */
+     /* Reel video section */
+#countdown-circle {
+    width: 68px;
+    height: 68px;
+    right: 47.3%;
+   margin-top: -2.1rem;
+  }
+  #countdown-text {
+    font-family: var(--bold-font);
+    font-size: var(--frankgot-tablet-small-size);
+}
 
 }
 
